netbook-login-page-added

--- a/blog-single.html
+++ b/blog-single.html
@@ -122,10 +122,10 @@
                     </ul>
                     <div class="header_buttons">
                         <div class="button">
-                            <a href="">Netbook Login</a>
+                            <a href="netbook-login.html">Netbook Login</a>
                         </div>
                         <div class="button">
-                            <a href="">Apply Now</a>
+                            <a href="apply-now.html">Apply Now</a>
                         </div>
                     </div>
                   </div>
