--- a/netbook-login.html
+++ b/netbook-login.html
@@ -136,154 +136,46 @@
     <!-- =================  breadcrumb section starts  ================================= -->
     <section class="breadcrumb_section">
         <div class="image">
-            <img src="assets/images/breadcrumbs/work-holiday.jpg" alt="breadcrumb">
+            <img src="assets/images/breadcrumbs/netbook-login.jpg" alt="breadcrumb">
         </div>
     </section>
     <!-- =================  breadcrumb section ends  ================================= -->
 
 
-    <!-- =================  work holiday section starts  ================================= -->
-    <section class="section_pd_tb pb-0">
-        <div class="container">
-            <div class="section_header">
-                <h2><span>Medical Staff</span></h2>
-                <h3>Work and Holiday Nursing</span></h3>
-            </div>
-            <div class="row padding_added_row about_intro">
-                <div class="col-lg-12 col-md-12 col-12">
-                    <p>
-                        Looking to take a break while keeping up your clinical experience? Interested in working country to coast? Want genuine work life balance and flexibility?
-                    </p>
-                </div>
-                <div class="col-lg-8 about_items about_item1">
-                    <p>
-                        Agency work is perfect for work and holiday planning, and our Allocations Consultants are experts in planning your work around your travels! Make the most of accommodation and rate perks in regional and rural Australia or travel from city to city.
-                        <br><br>
-                        We welcome all Nurses and Midwives on work and holiday visas. We can provide you work nationally as you move across Australia to enjoy and satisfy the conditions of your visa. We can provide you work in Metro, Regional and Rural areas. Our Allocations Consultants are well versed in the conditions of your visa and can assist in providing you the best and most suitable opportunities for work.
-                        <br><br>
-                        Accommodation is provided by our clients in Regional and Rural areas. This will be a big saving for you while here in Australia. You can enjoy the scenery and country or beachside lifestyle while working in the beautiful regional areas of Australia.
-                        <br><br>
-                        Medical Staff has a wide variety of positions available for Registered Nurses in all areas ranging from General, Medical, Surgical, Theatre, Aged Care, Midwifery, Paediatrics, ICU, Anaesthetics, Emergency, Mental Health, Rehab and all other types of wards.
-                        <br><br>
-                        With Hospital and community healthcare clients all across Australia, in both the private and public sector, Medical Staff provides our nurses and midwives with genuine work/life balance where you are given the flexibility to choose your own shifts, availabilities and determine your own working schedule as far in advance or last minute as you like.
-                    </p>
-                </div>
-                <div class="col-lg-4 about_items">
-                    <div class="image">
-                        <img src="assets/images/work-holiday-1.jpg" alt="about us">
-                    </div>
-                </div>
-            </div>
-            <div class="row padding_added_row mt-5 intro_2">
-                <div class="col-lg-5">
-                    <div class="image">
-                        <img src="assets/images/work-holiday-2.jpg" alt="Work Holiday">
-                    </div>
-                </div>
-                <div class="col-lg-7 work_holiday_text">
-                    <p>
-                        Our nursing agency invests in custom technologies so you can apply for shifts on the go, with our online rostering system allowing you to use your phone or computer to not only apply for shifts, but lodge availabilities, check rosters, monitor your compliances, find key information and more...
-                        <br><br>
-                        Medical Staff provides nursing staff with the opportunity of working in both Private and Public Hospitals, Aged Care, Universities, Homecare and Private Patients, Disability Services and NDIS, community centres, vaccinations, medical centres and more.
-                        <br><br>
-                        We ensure our Nurses are well suited and skilled in the various areas of work, and make sure they are briefed and prepared for new facilities they attend. We have work for all types of Nurses and Midwives with different levels of experience.
-                        <br><br>
-                        Medical Staff Nursing Agency welcomes highly experienced nurses as well as new graduates.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- =================  work holiday section ends  ================================= -->
-
-    <section class="mt-5 recruit_cta  mb-lg-4">
-        <div class="container pb-5">
-            <div class="padding_added_row">
-                <div class="row small_cta_row">
-                    <div class="col-lg-8 col-md-6 col-12 text_left">
-                        <p>
-                            Send inquiry to see if we can assist you in your specific area of need.
-                        </p>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-12 call_button">
-                         <a href="tel:1300105010">Call Us</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- =================  Contact Us section starts  ================================= -->
-    <section class="section_pd_tb contact_us_section">
+    <!-- =================  NetBook Login section starts  ================================= -->
+    <section class="section_pd_tb">
         <div class="container pb-4">
             <div class="section_header">
-                <h2>Contact Us</h2>
+                <h2><span>Medical Staff</span></h2>
+                <h3>Login</h3>
             </div>
-            <div class="row padding_added_row contact_row">
-                <div class="col-lg-6">
-                    <div class="wrapper_contact_left">
-                        <div class="image">
-                            <img src="assets/images/contact.jpg" alt="Contact">
-                        </div>
-                        <p class="contact_text_main">Need help? We exist to serve the user with the purpose of providing them with information. We want you to find what you're looking for. For any query, please contact HireCo experts for the best solution.</p>
-                        <div class="contact_list">
-                            <div class="contact_item">
-                                <div class="icon">
-                                    <img src="assets/icons/phone-call.png" alt="Phone">
-                                </div>
-                                <div class="contact_text">
-                                    <p>Call Anytime</p>
-                                    <a href="tel:1300105010">1300 10 50 10</a>
-                                </div>
+            <div class="row padding_added_row netbook_row">
+                <div class="col-lg-12">
+                    <div class="wrapper_netbook">
+                        <h3>Login To Your Account</h3>
+                        <div class="login_items">
+                            <div class="login_item client_login">
+                                <a href="">
+                                    <div class="icon">
+                                         <img src="assets/icons/login-client.png" alt="Icon">
+                                    </div>
+                                    <p>
+                                        Client Netbook Login
+                                    </p>
+                                </a>
                             </div>
-                            <div class="contact_item">
-                                <div class="icon">
-                                    <img src="assets/icons/email.png" alt="Mail">
-                                </div>
-                                <div class="contact_text">
-                                    <p>Send Mail</p>
-                                    <a href="mailto:join@medicalstaff.com.au">join@medicalstaff.com.au</a>
-                                </div>
-                            </div>
-                            <div class="contact_item">
-                                <div class="icon">
-                                    <img src="assets/icons/home-address.png" alt="Address">
-                                </div>
-                                <div class="contact_text">
-                                    <p>Address</p>
-                                    <a href="#">AMA House, Level 3 69 Christie Street, St Leonards, NSW 2065 </a>
-                                </div>
+                            <div class="login_item staff_login">
+                                <a href="">
+                                    <div class="icon">
+                                         <img src="assets/icons/login-staff.png" alt="Icon">
+                                    </div>
+                                    <p>
+                                        Staff Netbook Login
+                                    </p>
+                                </a>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-6 contact_form_right">
-                    <form>
-                        <div class="row mb-3">
-                            <div class="col">
-                              <input type="text" class="form-control" placeholder="Your Name" aria-label="First name">
-                            </div>
-                        </div>
-                        <div class="row mb-3">
-                            <div class="col">
-                              <input type="email" class="form-control" placeholder="Your Email" aria-label="Email">
-                            </div>
-                            <div class="col">
-                              <input type="text" class="form-control" placeholder="Subject" aria-label="Subject">
-                            </div>
-                        </div>
-                        <div class="row mb-3">
-                            <div class="col">
-                              <input type="tel" class="form-control" placeholder="Phone Number" aria-label="Phone">
-                            </div>
-                        </div>
-                        <div class="row mb-3">
-                            <div class="col">
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="10" placeholder="Message"></textarea>
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Send A Message</button>
-                      </form>
                 </div>
             </div> 
         </div>  
