--- a/client-services.html
+++ b/client-services.html
@@ -119,10 +119,10 @@
                     </ul>
                     <div class="header_buttons">
                         <div class="button">
-                            <a href="">Netbook Login</a>
+                            <a href="netbook-login.html">Netbook Login</a>
                         </div>
                         <div class="button">
-                            <a href="">Apply Now</a>
+                            <a href="apply-now.html">Apply Now</a>
                         </div>
                     </div>
                   </div>
