--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
                     </ul>
                     <div class="header_buttons">
                         <div class="button">
-                            <a href="">Netbook Login</a>
+                            <a href="netbook-login.html">Netbook Login</a>
                         </div>
                         <div class="button">
-                            <a href="">Apply Now</a>
+                            <a href="apply-now.html">Apply Now</a>
                         </div>
                     </div>
                   </div>
@@ -374,10 +374,10 @@
             </div>
             <div class="discover_section_buttons">
                 <div class="button_2 mb-0">
-                    <a href="">Apply Now</a>
+                    <a href="apply-now.html">Apply Now</a>
                 </div>
                 <div class="button_2">
-                    <a href="">Netbook Login</a>
+                    <a href="netbook-login.html">Netbook Login</a>
                 </div>
             </div>
         </div>
