--- a/agency-nurse.html
+++ b/agency-nurse.html
@@ -136,82 +136,104 @@
     <!-- =================  breadcrumb section starts  ================================= -->
     <section class="breadcrumb_section">
         <div class="image">
-            <img src="assets/images/breadcrumbs/work-holiday.jpg" alt="breadcrumb">
+            <img src="assets/images/breadcrumbs/why-agency-nurse.jpeg" alt="breadcrumb">
         </div>
     </section>
     <!-- =================  breadcrumb section ends  ================================= -->
 
 
-    <!-- =================  work holiday section starts  ================================= -->
-    <section class="section_pd_tb pb-0">
+    <!-- =========  why become agency nurse section starts  ================ -->
+    <section class="section_pd_tb why_agency_nurse_section pt-5 mt-lg-4 pb-5">
         <div class="container">
             <div class="section_header">
                 <h2><span>Medical Staff</span></h2>
-                <h3>Work and Holiday Nursing</h3>
+                <h3>Why Become an Agency Nurse?</h3>
+                <p>The <span>Top 4</span> Reasons according to our Nurses</p>
             </div>
-            <div class="row padding_added_row about_intro">
-                <div class="col-lg-12 col-md-12 col-12">
-                    <p>
-                        Looking to take a break while keeping up your clinical experience? Interested in working country to coast? Want genuine work life balance and flexibility?
-                    </p>
-                </div>
-                <div class="col-lg-8 about_items about_item1">
-                    <p>
-                        Agency work is perfect for work and holiday planning, and our Allocations Consultants are experts in planning your work around your travels! Make the most of accommodation and rate perks in regional and rural Australia or travel from city to city.
-                        <br><br>
-                        We welcome all Nurses and Midwives on work and holiday visas. We can provide you work nationally as you move across Australia to enjoy and satisfy the conditions of your visa. We can provide you work in Metro, Regional and Rural areas. Our Allocations Consultants are well versed in the conditions of your visa and can assist in providing you the best and most suitable opportunities for work.
-                        <br><br>
-                        Accommodation is provided by our clients in Regional and Rural areas. This will be a big saving for you while here in Australia. You can enjoy the scenery and country or beachside lifestyle while working in the beautiful regional areas of Australia.
-                        <br><br>
-                        Medical Staff has a wide variety of positions available for Registered Nurses in all areas ranging from General, Medical, Surgical, Theatre, Aged Care, Midwifery, Paediatrics, ICU, Anaesthetics, Emergency, Mental Health, Rehab and all other types of wards.
-                        <br><br>
-                        With Hospital and community healthcare clients all across Australia, in both the private and public sector, Medical Staff provides our nurses and midwives with genuine work/life balance where you are given the flexibility to choose your own shifts, availabilities and determine your own working schedule as far in advance or last minute as you like.
-                    </p>
-                </div>
-                <div class="col-lg-4 about_items">
-                    <div class="image">
-                        <img src="assets/images/work-holiday-1.jpg" alt="about us">
-                    </div>
-                </div>
-            </div>
-            <div class="row padding_added_row mt-5 intro_2">
-                <div class="col-lg-5">
-                    <div class="image">
-                        <img src="assets/images/work-holiday-2.jpg" alt="Work Holiday">
-                    </div>
-                </div>
-                <div class="col-lg-7 work_holiday_text">
-                    <p>
-                        Our nursing agency invests in custom technologies so you can apply for shifts on the go, with our online rostering system allowing you to use your phone or computer to not only apply for shifts, but lodge availabilities, check rosters, monitor your compliances, find key information and more...
-                        <br><br>
-                        Medical Staff provides nursing staff with the opportunity of working in both Private and Public Hospitals, Aged Care, Universities, Homecare and Private Patients, Disability Services and NDIS, community centres, vaccinations, medical centres and more.
-                        <br><br>
-                        We ensure our Nurses are well suited and skilled in the various areas of work, and make sure they are briefed and prepared for new facilities they attend. We have work for all types of Nurses and Midwives with different levels of experience.
-                        <br><br>
-                        Medical Staff Nursing Agency welcomes highly experienced nurses as well as new graduates.
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- =================  work holiday section ends  ================================= -->
-
-    <section class="mt-5 recruit_cta  mb-lg-4">
-        <div class="container pb-5">
-            <div class="padding_added_row">
-                <div class="row small_cta_row">
-                    <div class="col-lg-8 col-md-6 col-12 text_left">
+            <div class="why_item">
+                <div class="row padding_added_row why_item_row">
+                    <div class="col-lg-7 why_content">
+                        <h3>1. Flexibility</h3>
                         <p>
-                            Send inquiry to see if we can assist you in your specific area of need.
+                            By becoming an Agency Nurse, you have the flexibility to pick the days you want to work - allowing you to prioritise a young family, work Agency shifts around your primary workplace, travel and accommodate your schedule.
+                            <br> <br>
+                            Agency Nurses organise their shifts around school holidays, day-care schedules, and the other commitments in their lives. If you are undertaking further study and education, you can schedule your shifts around class timetables.
+                            <br> <br>
+                            The flexibility of Agency work also includes picking the timings of shifts that suit you and locations that are most convenient for you.
+                            <br> <br>
+                            Shifts can be booked in advance or close to the time. Our online rostering system lets you update your availabilities, show interest in shifts, and view your roster, all on your phone or computer, while on the go.
                         </p>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-12 call_button">
-                         <a href="tel:1300105010">Call Us</a>
+                    <div class="col-lg-5">
+                        <div class="image why_image">
+                            <img src="assets/images/flexibility.jpg" alt="flexibility">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="why_item reverse">
+                <div class="row padding_added_row why_item_row">
+                    <div class="col-lg-7 why_content">
+                        <h3>2. Experience</h3>
+                        <p>
+                            Agency Nursing is a fantastic way to gain broad and diverse experience and develop your CV.
+                            <br><br>
+                            Planning to apply for a management job in the city and still don't have enough experience? Rural nursing gives you the experience of a lifetime! Experience a new culture and lifestyle all while gaining new specialty skills before coming back to apply for that dream management position on your return.
+                            <br><br>
+                            Work in multiple departments and Hospitals with exposure to new technologies, equipment, and processes has helped improved the resume and competency of many of our Nurses, giving them the edge in their next job interview. By working as an Agency Nurse, you can work at the busiest Hospital in the state one day, and the smallest the next, all based on the skills and experience you seek to develop.
+                            <br><br>
+                            Speak with our friendly team who can help advise which Agency opportunities best suit your goals.
+                        </p>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="image why_image">
+                            <img src="assets/images/experience.jpeg" alt="flexibility">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="why_item">
+                <div class="row padding_added_row why_item_row">
+                    <div class="col-lg-7 why_content">
+                        <h3>3. Travel</h3>
+                        <p>
+                            Medical Staff works nationwide with over 1000+ healthcare clients across the country, in metropolitan, regional and rural areas. We work with Public and Private Hospitals, Aged Care, Homecare and Private Patients, Disability Care and NDIS, Universities, medical centres, vaccination services, community health centres and more.
+                            <br> <br>
+                            Agency Nursing provides you the opportunity to work and travel! Organise your shifts around where you want to travel and take advantage of great travel perks and included accommodation to fund your next adventure! Accommodation is provided by our clients in regional and rural areas. This provides you with a huge saving while travelling Australia. You can enjoy the scenery and bush to coast lifestyle while working in the beautiful landscapes Australia has on offer.
+                            <br> <br>
+                            On top of that - Medical Staff currently has our Regional & Rural Nursing bonus on offer, with a $1000 additional bonus paid to our Nurses for every eight weeks of regional or rural placements completed.                            
+                        </p>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="image why_image">
+                            <img src="assets/images/travel2.jpeg" alt="Travel">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="why_item reverse">
+                <div class="row padding_added_row why_item_row">
+                    <div class="col-lg-7 why_content">
+                        <h3>4. Impressive Pay Rates</h3>
+                        <p>
+                            Impressive pay rates are one of the most well-known perks to Agency Nursing. Many Nurses look to Agency Nursing when they are trying to make extra cash. Agency nurses enjoy higher rates than most equivalent permanent positions, without even considering the additional flexibilities and other conveniences that come along with it.
+                           <br> <br>
+                            Enjoy elevated, casual hourly rates and additional penalties for night shifts, weekends, public holidays and more.
+                            <br> <br>
+                            Medical Staff provides you with competitive pay rates.
+                        </p>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="image why_image">
+                            <img src="assets/images/impressive.jpeg" alt="Impressive Pay Rates">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <!-- =========  why become agency nurse section ends  ================ -->
+
 
     <!-- =================  Contact Us section starts  ================================= -->
     <section class="section_pd_tb contact_us_section">
