--- a/registered-nurses-and-midwives.html
+++ b/registered-nurses-and-midwives.html
@@ -142,12 +142,12 @@
     <!-- =================  breadcrumb section ends  ================================= -->
 
 
-    <!-- =================  work holiday section starts  ================================= -->
+    <!-- =================  Registered Nurses section starts  ================================= -->
     <section class="section_pd_tb pb-0">
         <div class="container">
             <div class="section_header">
                 <h2><span>Medical Staff</span></h2>
-                <h3>Registered Nurses and Midwives</span></h3>
+                <h3>Registered Nurses and Midwives</h3>
             </div>
             <div class="row padding_added_row about_intro">
                 <div class="col-lg-12 col-md-12 col-12">
@@ -176,7 +176,7 @@
             </div>
         </div>
     </section>
-    <!-- =================  work holiday section ends  ================================= -->
+    <!-- ================= Registered Nurses section ends  ================================= -->
 
     <section class="mt-5 recruit_cta  mb-lg-4">
         <div class="container pb-5">
