privacy-policy-page-completed-and-footer-links-updated

--- a/client-services.html
+++ b/client-services.html
@@ -592,11 +592,11 @@
                         <div class="footer_item">
                             <h5>Quick Links</h5>
                             <div class="quick_links">
-                                <a href="">Why become an agency Nurse</a>
-                                <a href="">Education and Training</a>
-                                <a href="">Privacy Policy</a>
-                                <a href="">Referral Bonus</a>
-                                <a href="">Useful Links</a>
+                                <a href="agency-nurse.html">Why become an agency Nurse</a>
+                                <a href="education-and-training.html">Education and Training</a>
+                                <a href="privacy-policy.html">Privacy Policy</a>
+                                <a href="referral-bonus.html">Referral Bonus</a>
+                                <a href="useful-links.html">Useful Links</a>
                             </div>
                         </div>
                     </div>
