--- a/vaccination.html
+++ b/vaccination.html
@@ -190,7 +190,7 @@
                 </div>
                 <div class="col-lg-4 about_items">
                     <div class="image pt-4">
-                        <a href="">
+                        <a href="referral-bonus.html">
                             <img src="assets/images/referral-bonus-intro.jpg" alt="about us">
                         </a>
                     </div>
