links-added-to-job-item

--- a/find-jobs.html
+++ b/find-jobs.html
@@ -343,11 +343,13 @@
                         <div class="job_list_item">
                             <div class="job_list_wrapper">
                                 <div class="job_list_image">
-                                    <img src="assets/images/jobs/job1.jpg" alt="Job Image">
+                                    <a href="apply-now.html">
+                                        <img src="assets/images/jobs/job1.jpg" alt="Job Image">
+                                    </a>
                                 </div>
                                 <div class="job_list_content">
                                     <div class="job_list_head">
-                                        <h6>Clinical Nurse Specialist - Job 1</h6>
+                                        <h6><a href="apply-now.html">Clinical Nurse Specialist - Job 1</a></h6>
                                         <p>Published 7 months ago</p>
                                     </div>
                                     <div class="job_list_content_bottom">
@@ -371,11 +373,11 @@
                         <div class="job_list_item">
                             <div class="job_list_wrapper">
                                 <div class="job_list_image">
-                                    <img src="assets/images/jobs/job2.jpg" alt="Job Image">
+                                    <a href="apply-now.html"><img src="assets/images/jobs/job2.jpg" alt="Job Image"></a>
                                 </div>
                                 <div class="job_list_content">
                                     <div class="job_list_head">
-                                        <h6>Clinical Nurse Specialist - Job 2</h6>
+                                        <h6><a href="apply-now.html">Clinical Nurse Specialist - Job 2</a></h6>
                                         <p>Published 7 months ago</p>
                                     </div>
                                     <div class="job_list_content_bottom">
@@ -399,11 +401,13 @@
                         <div class="job_list_item">
                             <div class="job_list_wrapper">
                                 <div class="job_list_image">
-                                    <img src="assets/images/jobs/job3.jpg" alt="Job Image">
+                                    <a href="apply-now.html">
+                                        <img src="assets/images/jobs/job3.jpg" alt="Job Image">
+                                    </a>
                                 </div>
                                 <div class="job_list_content">
                                     <div class="job_list_head">
-                                        <h6>Clinical Nurse Specialist - Job 3</h6>
+                                        <h6><a href="apply-now.html">Clinical Nurse Specialist - Job 3</a></h6>
                                         <p>Published 7 months ago</p>
                                     </div>
                                     <div class="job_list_content_bottom">
@@ -427,11 +431,13 @@
                         <div class="job_list_item">
                             <div class="job_list_wrapper">
                                 <div class="job_list_image">
-                                    <img src="assets/images/jobs/job4.jpg" alt="Job Image">
+                                    <a href="apply-now.html">
+                                        <img src="assets/images/jobs/job4.jpg" alt="Job Image">
+                                    </a>
                                 </div>
                                 <div class="job_list_content">
                                     <div class="job_list_head">
-                                        <h6>Clinical Nurse Specialist - Job 4</h6>
+                                        <h6><a href="apply-now.html">Clinical Nurse Specialist - Job 4</a></h6>
                                         <p>Published 7 months ago</p>
                                     </div>
                                     <div class="job_list_content_bottom">
@@ -455,11 +461,13 @@
                         <div class="job_list_item">
                             <div class="job_list_wrapper">
                                 <div class="job_list_image">
-                                    <img src="assets/images/jobs/job5.jpg" alt="Job Image">
+                                    <a href="apply-now.html">
+                                        <img src="assets/images/jobs/job5.jpg" alt="Job Image">
+                                    </a>
                                 </div>
                                 <div class="job_list_content">
                                     <div class="job_list_head">
-                                        <h6>Clinical Nurse Specialist - Job 5</h6>
+                                        <h6><a href="apply-now.html">Clinical Nurse Specialist - Job 5</a></h6>
                                         <p>Published 7 months ago</p>
                                     </div>
                                     <div class="job_list_content_bottom">
