service-images-updated

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <div class="col-lg-3 col-md-4 col-6 service_item">
                     <div class="service_item_wrap">
                         <a href="client-services.html">
-                            <img src="assets/images/services/client-services.png" alt="Client Services">
+                            <img src="assets/images/services/client-services.jpg" alt="Client Services">
                         </a>
                         <div class="service_title">
                             <h5><a href="client-services.html">Client Services</a></h5>
@@ -256,7 +256,7 @@
                 <div class="col-lg-3 col-md-4 col-6 service_item">
                     <div class="service_item_wrap">
                         <a href="registered-nurses-and-midwives.html">
-                            <img src="assets/images/services/registered-nm.png" alt="Client Services">
+                            <img src="assets/images/services/registeres-nurses.jpg" alt="Client Services">
                         </a>
                         <div class="service_title">
                             <h5><a href="registered-nurses-and-midwives.html">Registered Nurses and Midwives</a></h5>
@@ -266,7 +266,7 @@
                 <div class="col-lg-3 col-md-4 col-6 service_item">
                     <div class="service_item_wrap">
                         <a href="aged-care.html">
-                            <img src="assets/images/services/aged-care-nursing-home.png" alt="Client Services">
+                            <img src="assets/images/services/aged-care-nursing-home.jpg" alt="Client Services">
                         </a>
                         <div class="service_title">
                             <h5><a href="aged-care.html">Aged Care-Nursing Home</a></h5>
@@ -276,7 +276,7 @@
                 <div class="col-lg-3 col-md-4 col-6 service_item">
                     <div class="service_item_wrap">
                         <a href="disability-ndis.html">
-                            <img src="assets/images/services/ndis.png" alt="Client Services">
+                            <img src="assets/images/services/ndis-disablity.jpg" alt="Client Services">
                         </a>
                         <div class="service_title">
                             <h5><a href="disability-ndis.html">NDIS Disability Private Homecare Clients</a></h5>
@@ -286,7 +286,7 @@
                 <div class="col-lg-3 col-md-4 col-6 service_item">
                     <div class="service_item_wrap">
                         <a href="vaccination.html">
-                            <img src="assets/images/services/vaccination-service.png" alt="Client Services">
+                            <img src="assets/images/services/vaccination-service.jpg" alt="Client Services">
                         </a>
                         <div class="service_title">
                             <h5><a href="vaccination.html">Vaccination Service</a></h5>
@@ -296,7 +296,7 @@
                 <div class="col-lg-3 col-md-4 col-6 service_item">
                     <div class="service_item_wrap">
                         <a href="allied-health.html">
-                            <img src="assets/images/services/allied-health.png" alt="Client Services">
+                            <img src="assets/images/services/allied-health-service.jpg" alt="Client Services">
                         </a>
                         <div class="service_title">
                             <h5><a href="allied-health.html">Allied Health</a></h5>
@@ -306,7 +306,7 @@
                 <div class="col-lg-3 col-md-4 col-6 service_item">
                     <div class="service_item_wrap">
                         <a href="work-holiday.html">
-                            <img src="assets/images/services/working-and-holidays.png" alt="Client Services">
+                            <img src="assets/images/services/working-and-holidays.jpg" alt="Client Services">
                         </a>
                         <div class="service_title">
                             <h5><a href="work-holiday.html">Working And Holidays</a></h5>
@@ -316,7 +316,7 @@
                 <div class="col-lg-3 col-md-4 col-6 service_item">
                     <div class="service_item_wrap">
                         <a href="recruitment.html">
-                            <img src="assets/images/services/recruitment.png" alt="Client Services">
+                            <img src="assets/images/services/recruitment.jpg" alt="Client Services">
                         </a>
                         <div class="service_title">
                             <h5><a href="recruitment.html">Recruitment</a></h5>
